fix: add missing padding under dropdown helptexts (#101)
* fix: add missing padding under dropdown helptexts

* undo bump

--- a/packages/css/src/formElements/multiselect/multiselect.css
+++ b/packages/css/src/formElements/multiselect/multiselect.css
@@ -99,6 +99,7 @@
 
 .md-multiselect__help-text--open {
   padding-top: 0.5em;
+  padding-bottom: 0.5em;
   max-height: 2000px;
   transition: max-height 0.5s ease-in;
 }
